--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://3.109.49.245:9000</sonar.host.url>
 		<sonar.login>admin</sonar.login>
-		<sonar.password>squ_4b835be6ba6f27d58cbd695df2db7687019e3695</sonar.password> 
+		<sonar.password>Passw0rd</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
